Added new design

--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -16,8 +16,9 @@
 <!--<h1>hits: {{ hits }}</h1>-->
 <div id="front-page">
 	<div class="top-spacer"></div>
+	<div class="space120"></div>
 	<div class="image-grid"></div>
-	<div id="search-box" class="panel span9">
+	<div id="search-box" class="panel dark">
 		<div class="pad15">
 		<form>
 			I want to find
