--- a/xperiences/merchants/templates/merchants/merchant_application.html
+++ b/xperiences/merchants/templates/merchants/merchant_application.html
@@ -4,101 +4,114 @@
 {% load x_tags %} <!-- what are x_tags? -->
 
 {% block extra_head %}
-    <script type='text/javascript' src='http://www.iplocationtools.com/iplocationtools.js?key={{ IP_GEOLOCATOR_API_KEY }}' ></script>
-    <script type='text/javascript' src='/static/jq.templates.js' ></script>
-    <script type='text/javascript' src='/static/maps.js'></script>
+<script type='text/javascript' src='http://www.iplocationtools.com/iplocationtools.js?key={{ IP_GEOLOCATOR_API_KEY }}' ></script>
+<script type='text/javascript' src='/static/jq.templates.js' ></script>
+<script type='text/javascript' src='/static/maps.js'></script>
 {% endblock %}
 
 {% block body %}
-    {% include "header.html" %} <!-- why extends base.html isn't working? -->
+{% include "header.html" %} <!-- why extends base.html isn't working? -->
 
-<div class="content-body">
-	<div class="main-content">
-		<div class="command-bar-container">
-			<!--<div class="command-bar">
-				This can be hidden if not in use
-			</div>-->
+<div class="container">
+	<div class="column span9">
+		<div class="space30"></div>
+		<h1>Apply to be listed and start selling</h1>
+		{% if status == 'saved' %}
+		Sent! Your application will be reviewed by our team, and we'll get back you prompotly.
+		{% else %}
+		{{ form.errors }}
+		<form action="#" method="POST" enctype="multipart/form-data">
+			<fieldset class="panel">
+				<div class="pad15">
+					<h3>Your contact information</h3>
+					<div class="row">
+						<div class="span6">
+							<label>Name</label>
+							<input class="span6" type="text" name="name" value='{{ form.name.value }}' />
+						</div>
+					</div>
+					<div class="row">
+						<div class="span6">
+							<label>Email</label>
+							<input class="span6" type="text" name="email" value='{{ user.email }}' />
+						</div>
+					</div>
+					<div class="row">
+						<div class="span6">
+							<label>Phone number</label>
+							<input class="span6" type="text" name="phone-number" value='{{ form.phone_number.value }}' />
+						</div>
+					</div>
+					<address><!-- html 5 semantic markup -->
+					<div class="row">
+						<div class="span6">
+							<label>Address</label><!-- not sure if all these fields are necessary... need to undestand what form.address.value is -->
+							<input class="span6" type="text" name="address" value='{{ form.address.value }}' />
+						</div>
+					</div>
+					<div class="row">
+						<div class="span4">
+							<label>City</label>
+							<input class="span4" type="text" name="city">
+						</div>
+						<div class="span2">
+							<label>State</label>
+							<select name="state" class="span2">
+								<option>AL</option>
+								<option>BM</option>
+								<option>CA</option>
+								<option>PA</option>
+								<option>NY</option>
+								<option>NH</option>
+								<option>MA</option>
+							</select>    
+						</div>
+					</div>
+					<div class="row">
+						<div class="span3">
+							<label>Zipcode</label>
+							<input class="span3" type="text" name="zipcode">
+						</div>
+						<div class="span3">
+							<label>Country</label>
+							<select name="country" class="span3">
+								<option>United States</option>
+							</select>
+						</div>
+					</address>
+				</div>
+			</fieldset>
+
+					<fieldset class="panel">
+						<div class="pad15">
+						<h3>Tell us about yourself</h3>
+						<p class="help-text">Tell us about yourself, how long have you been doing this, what sets you apart... anything that helps tell your story</p>
+						<textarea class="span6" class="description" required="required" name="merchant_app_description">{{ form.description.value }}</textarea>
+					</div>
+					</fieldset>
+
+					<fieldset class="panel">
+						<div class="pad15">
+						<h3>What are you offering?</h3>
+						<p class="help-text">Tell us about your services, what makes your work appealing and unique to your customers</p>
+						<textarea class="span6" class="description" required="required" name="offering_app_description">{{ form.offering.value }}</textarea>
+					</div>
+					</fieldset>
+
+
+					<fieldset class="panel">
+						<div class="pad15">
+						<h3>Who are your customers?</h3>
+						<p class="help-text">Describe your target customers (age, charateristics, lifestyle, etc.)</p>
+						<textarea class="span6" class="description" required="required" name="target_customers_app_description">{{ form.target_customers.value }}</textarea>
+					</div>
+					</fieldset>
+					<input type="submit" class="btn" value="Send application">
+			</form>
+			{% endif %}
 		</div>
-		<!--<div class="two-col-right">
-			<h3>Welcome!</h3>
-			<p>Hamburger corned beef turkey, fatback pancetta leberkŠse pork chop pork ham hock short ribs. Rump tail pork chop pork meatloaf. Beef short loin rump, capicola leberkŠse drumstick chicken short ribs. Capicola jerky tail hamburger tri-tip, kielbasa sirloin brisket frankfurter swine. Shankle turducken bresaola ground round pig. Meatball sausage chuck, strip steak fatback leberkŠse sirloin boudin shankle filet mignon tenderloin kielbasa. Ball tip boudin pancetta shank, leberkŠse spare ribs pork chop strip steak bacon sausage swine turducken flank.</p>
-			<p>Shoulder andouille short loin chicken venison. Pork loin chicken sausage, hamburger t-bone flank beef ribs kielbasa drumstick turducken. Pastrami sausage shoulder t-bone, filet mignon prosciutto leberkŠse drumstick short loin flank spare ribs meatball chicken. Short ribs ball tip short loin t-bone, drumstick boudin kielbasa capicola shankle tongue beef tri-tip. Shankle short loin frankfurter, fatback jerky pancetta bacon ham hock tenderloin leberkŠse kielbasa t-bone boudin ham brisket. Meatloaf shank bacon, rump ham venison swine fatback turkey corned beef jowl brisket kielbasa. Tongue tri-tip capicola, t-bone ribeye kielbasa flank chicken brisket jerky spare ribs meatball.</p>
-		</div>-->
-        <div class="two-col-left">
-            <h1>Apply to be listed and start selling</h1>
-    {% if status == 'saved' %}
-        Sent! Your application will be reviewed by our team, and we'll get back you prompotly.
-    {% else %}
-    {{ form.errors }}
-    <form action="#" method="POST" enctype="multipart/form-data">
-        <fieldset>
-            <h3>Your contact information</h3>
-            <label>Name</label>
-            <input type="text" class="medium" name="name" value='{{ form.name.value }}' />
-            <label>Email</label>
-            <input type="text" class="medium" name="email" value='{{ user.email }}' />
-            <label>Phone number</label>
-            <input type="text" class="medium" name="phone-number" value='{{ form.phone_number.value }}' />
-            <address><!-- html 5 semantic markup -->
-                <label>Address</label><!-- not sure if all these fields are necessary... need to undestand what form.address.value is -->
-                <input type="text" name="address" value='{{ form.address.value }}' />
-                <div class="row">
-                    <div class="column">
-                        <label>City</label>
-                        <input class="medium" type="text" name="city">
-                    </div>
-                    <div class="column">
-                        <label>State</label>
-                        <select name="state">
-                            <option>AL</option>
-                            <option>BM</option>
-                            <option>CA</option>
-                            <option>PA</option>
-                            <option>NY</option>
-                            <option>NH</option>
-                            <option>MA</option>
-                        </select>    
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <label>Zipcode</label>
-                        <input class="short" type="text" name="zipcode">
-                    </div>
-                    <div class="column">
-                        <label>Country</label>
-                        <select class="short" name="country">
-                            <option>United States</option>
-						</select>
-                    </div>
-            </address>
-        </fieldset>
-
-        <fieldset>
-            <h3>Tell us about yourself</h3>
-            <p class="help-text">Tell us about yourself, how long have you been doing this, what sets you apart... anything that helps tell your story</p>
-            <textarea class="tall" class="description" required="required" name="merchant_app_description">{{ form.description.value }}</textarea>
-        </fieldset>
-
-        <fieldset>
-            <h3>What are you offering?</h3>
-            <p class="help-text">Tell us about your services, what makes your work appealing and unique to your customers</p>
-            <textarea class="tall" class="description" required="required" name="offering_app_description">{{ form.offering.value }}</textarea>
-        </fieldset>
-
-
-        <fieldset>
-            <h3>Who are your customers?</h3>
-            <p class="help-text">Describe your target customers (age, charateristics, lifestyle, etc.)</p>
-            <textarea class="tall" class="description" required="required" name="target_customers_app_description">{{ form.target_customers.value }}</textarea>
-        </fieldset>
-        <input type="submit" class="margin-top-30" value="Send application">
-    </form>
-    {% endif %}
-        </div>
-    </div><!-- close main-content -->
-</div><!-- close content-body -->
-    {% include "footer.html" %}
+	</div><!-- close content-body -->
+{% include "footer.html" %}
 
 {% endblock %}
 
