--- a/xperiences/templates/header.html
+++ b/xperiences/templates/header.html
@@ -1,11 +1,9 @@
 {% block header %}
 <header>
 	<div class="header-wrap">
-		<a id="logo" href="/">
-			naanprofit
-		</a>
-		<a id="service-list" href="/start">Start selling</a>
-		<div class="clear"></div>
+		<a id="logo" href="/"><span>naanprofit</span></a>
+		<a id="service-list" class="btn" href="/start">Start selling</a>
 	</div>
+	<div class="bottom-border"></div>
 </header>
 {% endblock %}
