--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -21,11 +21,11 @@
 	<div id="search-box" class="panel dark">
 		<div class="pad15">
 		<form>
-			I want to find
+			<span>I want to find</span>
 			<input class="default span2" type="text" alt="activities"/>
-			near
+			<span>near</span>
 			<input class="default span3" type="text" alt="address or zip code"/>
-			<input class="btn" type="submit" value="search" />
+			<input class="btn" type="submit" value="Search" />
 		</form>
 	</div>
 	</div>
