--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -1,134 +1,149 @@
 {% extends 'base.html' %}
 {% block extra_head %}
-    {{ form.media }}
+{{ form.media }}
 {% endblock %}
+
 {% block content %}
-    <h2>Add listing form</h2><!-- we can change this title based on the niche-->
-    {{ form.errors }}
-    <form action="#" method="POST" enctype="multipart/form-data">
-        <fieldset>
-            <legend>Describe your offering</legend>
-            <label>Title {{ form.title }}</label><br /><br />
-            <label>Description (tell us about your cooking, the setting, yourself... anything that helps tell your story)<br />
-            {{ form.description }}</label><br /><br />
+<div class="container">
+	<div class="space30"></div>
+	<div class="column span9">
+		<h2>Add listing form</h2><!-- we can change this title based on the niche-->
+		{{ form.errors }}
+		<form action="#" method="POST" enctype="multipart/form-data">
+			<fieldset class="panel">
+				<div class="pad15">
+					<h3>Describe your offering</h3>
+					
+					<div class="row">
+						<div>
+							<label>Title</label>
+							<div class="span6-wrapper">
+								{{ form.title }}
+							</div>
+						</div>
+					</div>
 
-            <label>Category
-            {{ form.category }}
-            </label><br /><br />
-        </fieldset>
+					<!--<div class="row">
+						<label>Category</label>
+						{{ form.category }}
+					</div>-->
 
-        <br /><br />
+					<div class="row">
+						<div>
+						<label>Description</label>
+						{{ form.description }}
+						<p class="secondary">(tell us about your cooking, the setting, yourself... anything that helps tell your story)</p>
+						</div>
+					</div>
+				</div>
+			</fieldset>
 
-        <fieldset>
-            <legend>Tell your story visually</legend>
-            <label>Upload your images
-                {{ form.photo1 }}
-                {{ form.photo2 }}
-                {{ form.photo3 }}
-                {{ form.photo4 }}
-                {{ form.photo5 }}
-            </label><br /><br />
-            <label>Link to a video {{ form.video_link }}</label>
-        </fieldset>
+			<fieldset class="panel">
+				<h3>Tell your story visually</h3>
+				<div class="row">
+					<label>Upload your images</label>
+					{{ form.photo1 }}
+					{{ form.photo2 }}
+					{{ form.photo3 }}
+					{{ form.photo4 }}
+					{{ form.photo5 }}
+				</div>
+				<div class="row">
+					<div>
+						<label>Link to a video</label>
+						<div class="span6-wrapper">{{ form.video_link }}</div>
+					</div>
+				</div>
+			</fieldset>
+			
+			
+			<fieldset class="panel">
+				<h3>Location</h3>
+				{{ form.use_saved_address }}
+				<address><!-- html 5 semantic markup -->
+					Address:
+					{{ form.address }}
+					<br />
+					<!--label>Address <input class="space_common" type="text" name="address"></label><br />
+				<label>City  <input class="space_common" type="text" name="city"></label><br />
+				<label>State
+					<select name="state">
+						<option>AL</option>
+						<option>BM</option>
+						<option>CA</option>
+						<option>PA</option>
+						<option>NY</option>
+						<option>NH</option>
+						<option>MA</option>
+					</select>
+				</label><br />
+				<label>Zip-code<input class="space_common" type="text" name="zipcode"></label><br />
+				<label>Country  <!-- eveyrthing is going to be in the U.S. for now>
+					<select name="country">
+						<option>United States</option>
+					</select>
+				</label><br /> -->
+				{{ form.xp_location }}
+			</address><br />
+		</fieldset>
+		<fieldset class="panel">
+			<h3>Available dates and times</h3>
+			<p> Pick available dates </p>
+			From:
+			{{ form.valid_from }}
+			<br />
+			Until:
+			{{ form.valid_until }}
+			<!-- how to enable them select specific dates as well as 'from' 'to'? -->
+			<!-- the calendar here is just a place holder -->
 
-        <br /><br />
+			<!--iframe id='cv_if1' src='http://cdn.instantcal.com/cvir.html?id=cv_nav1&theme=RE&ntype=cv_datepickerm&file=http%3A%2F%2Fwww.instantcal.com%2Ftest.ics' allowTransparency='true' scrolling='no' frameborder=0 height=250 width=250></iframe-->
+			<br />
+			<p>Pick available times</p>
+			<!-- here I want to include a better time widget, perhaps a slider like in Kayak. -->
+			<!--input type="radio" name="mornings" />Mornings<br />
+			<input type="radio" name="evenings" />Evenings<br />
+			<input type="radio" name="all_day" />All day<br /-->
+		</fieldset>
+		<fieldset class="panel">
+			<h3>Give more details to help people find you</h3>
+			<label>Tags</label>
+			{{ form.tags }}<!-- I need to learn how to do this... -->
+			{{ form.my_place.label_tag }}
+			{{ form.my_place }}
+			{{ form.delivery.label_tag }}
+			{{ form.delivery }}
+			{{ form.pick_up.label_tag }}
+			{{ form.pick_up }}
+		</fieldset>
+		<fieldset class="panel">
+			<h3>Price and capacity</h3>
+			<div class="row">
+				<div>
+					<label>Price</label>
+					<div class="row">
+						<span>$</span>{{ form.price }}<span>USD</span>
+					</div>
+				</div>
+			</div>
 
-        <fieldset>
-            <legend>Location</legend>
-            {{ form.use_saved_address }}
-            <address><!-- html 5 semantic markup -->
-                Address:
-                {{ form.address }}
-                <br />
-                <!--label>Address <input class="space_common" type="text" name="address"></label><br />
-                <label>City  <input class="space_common" type="text" name="city"></label><br />
-                <label>State
-                    <select name="state">
-                        <option>AL</option>
-                        <option>BM</option>
-                        <option>CA</option>
-                        <option>PA</option>
-                        <option>NY</option>
-                        <option>NH</option>
-                        <option>MA</option>
-                    </select>
-                </label><br />
-                <label>Zip-code<input class="space_common" type="text" name="zipcode"></label><br />
-                <label>Country  <!-- eveyrthing is going to be in the U.S. for now>
-                    <select name="country">
-                       <option>United States</option>
-                    </select>
-                </label><br /-->
-                {{ form.xp_location }}
-            </address><br />
-        </fieldset>
-
-        <br /><br />
-
-        <fieldset>
-            <legend>Available dates and times</legend>
-            <p> Pick available dates </p>
-            From:
-            {{ form.valid_from }}
-            <br />
-            Until:
-            {{ form.valid_until }}
-            <!-- how to enable them select specific dates as well as 'from' 'to'? -->
-            <!-- the calendar here is just a place holder -->
-
-            <!--iframe id='cv_if1' src='http://cdn.instantcal.com/cvir.html?id=cv_nav1&theme=RE&ntype=cv_datepickerm&file=http%3A%2F%2Fwww.instantcal.com%2Ftest.ics' allowTransparency='true' scrolling='no' frameborder=0 height=250 width=250></iframe-->
-            <br />
-            <p>Pick available times</p>
-            <!-- here I want to include a better time widget, perhaps a slider like in Kayak. -->
-            <!--input type="radio" name="mornings" />Mornings<br />
-            <input type="radio" name="evenings" />Evenings<br />
-            <input type="radio" name="all_day" />All day<br /-->
-        </fieldset>
-
-        <br /><br />
-
-        <fieldset>
-            <legend>Give more details to help people find you</legend>
-            <label>Tags {{ form.tags }}</label><br /><br /><!-- I need to learn how to do this... -->
-            {{ form.my_place.label_tag }}
-            {{ form.my_place }}
-            <br />
-            {{ form.delivery.label_tag }}
-            {{ form.delivery }}
-            <br />
-            {{ form.pick_up.label_tag }}
-            {{ form.pick_up }}
-            <br />
-        </fieldset>
-
-        <br /><br />
-
-        <fieldset>
-            <legend>Price and capacity</legend>
-            <label for="id_price">Price</label>
-            <span>$</span>
-            {{ form.price }}
-            <span>USD</span><br /><br />
-            
-            <label for="capacity">How many people can you feed?
-            {{ form.capacity }}
-        </fieldset>
-
-        <br /><br />
-
-        <input type="submit" class="button" value="View listing">
-
-    </form>
+			<label for="capacity">How many people can you feed?</label>
+				{{ form.capacity }}
+			</fieldset>
+			<input class="btn" type="submit" value="View listing">
+		</form>
+	</div>
+</div>
 {% endblock %}
 <!-- -- title for listing
 -- text area for description
 -- upload images ("of your cooking, the setting, yourself. anything that helps tell your story.")
 -- link to video (or embedding)
 -- geo location (need to represent if it's (a) stationary, (b) has a delivery service area...
-   enter address and radius, we pull geo location from Google and display map.
+enter address and radius, we pull geo location from Google and display map.
 -- time availability widget - use calendar and enable them to mark multiple dates.
 
-    as well as general times, like "lunchtime weekdays" (these can be check boxes)
+as well as general times, like "lunchtime weekdays" (these can be check boxes)
 
 -- toggle: listing "active" / "inactive"
 -- tags
